Manifests/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecom
  labels:
    name: ecom
    app.kubernetes.io/part-of: mern-stack
